--- a/JavaScript/5-Demo-Scope/2-Hoisting.html
+++ b/JavaScript/5-Demo-Scope/2-Hoisting.html
@@ -8,6 +8,7 @@
 <pre>
     (function bar() {
         var a = 1;
+
         var x = b; //ok, since b is declared later
         try {
             var y = z; //ReferenceError: 'z' is undefined
@@ -25,6 +26,7 @@
 <script type="application/javascript">
     (function bar() {
         var a = 1;
+        //var b = 90;
         var x = b; //ok, since b is declared later
         try {
             var y = z; //ReferenceError: 'z' is undefined
